k8s/trust-svc/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: trust-svc
  namespace: marty
  labels:
    app: trust-svc
    component: service
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/port: "8080"
    prometheus.io/path: "/metrics"
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 8080
    targetPort: http
    protocol: TCP
  - name: metrics
    port: 9090
    targetPort: metrics
    protocol: TCP
  selector:
    app: trust-svc
    component: service
---
apiVersion: v1
kind: Service
metadata:
  name: trust-svc-external
  namespace: marty
  labels:
    app: trust-svc
    component: service-external
spec:
  type: LoadBalancer
  ports:
  - name: http
    port: 80
    targetPort: http
    protocol: TCP
  selector:
    app: trust-svc
    component: service
